k8s/games/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-frontend
  namespace: games
  labels:
    app: games-frontend
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: games-frontend
  template:
    metadata:
      labels:
        app: games-frontend
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: frontend
          image: ghcr.io/therayquaza/home-cluster/games-frontend:v0.3.2@sha256:ffe5556c2e1f98f635e6a88fa90a36fbe1a9f073e6942c49e5e9b42e42c653c8
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-tmp
              mountPath: /tmp
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "50m"
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 10
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
