k8s/games/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-backend
  namespace: games
  labels:
    app: games-backend
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: games-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: games-backend
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: backend
          image: ghcr.io/therayquaza/home-cluster/games-backend:v0.2.2@sha256:0c4ce0b4a6dcfe573271062930a0e86c49bf9595e516dfdb591138c3c57dcf37
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 30
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 30
            failureThreshold: 3
