k8s/games/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games-route
  namespace: games
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-gateway
      namespace: default
      sectionName: games-https
  hostnames:
    - games.internal.rayq.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: ''
          kind: Service
          name: games-backend-service
          port: 8080
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /ws
      backendRefs:
        - group: ''
          kind: Service
          name: games-backend-service
          port: 8080
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: games-frontend-service
          port: 80
          weight: 1
